fix white space around div

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+html,
+body {
+  margin: 0;
+  min-height: 100vh;
+}
+
 .center-align {
   text-align: center;
 }
